Add endpoint and methods to insert posts and comments into db
